--- a/app/src/main/res/drawable-night/sender.xml
+++ b/app/src/main/res/drawable-night/sender.xml
@@ -3,14 +3,14 @@
     android:shape="rectangle">
     
     <corners
-        android:bottomLeftRadius="4dp"
-        android:bottomRightRadius="18dp"
+        android:bottomLeftRadius="18dp"
+        android:bottomRightRadius="4dp"
         android:topLeftRadius="18dp"
         android:topRightRadius="18dp" />
     
-    <solid android:color="@color/chat_bubble_receiver" />
+    <solid android:color="@color/chat_bubble_sender_dark" />
     
     <stroke
-        android:width="1dp"
-        android:color="@color/md_theme_light_outlineVariant" />
+        android:width="0dp"
+        android:color="@android:color/transparent" />
 </shape>
