--- a/app/src/main/res/drawable/sender.xml
+++ b/app/src/main/res/drawable/sender.xml
@@ -1,14 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     
     <corners
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="0dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp" />
+        android:bottomLeftRadius="18dp"
+        android:bottomRightRadius="4dp"
+        android:topLeftRadius="18dp"
+        android:topRightRadius="18dp" />
     
-    <gradient
-        android:startColor="#007BA7"
-        android:endColor="#007BA7"
-        android:angle="315" />
+    <solid android:color="@color/chat_bubble_sender" />
+    
+    <stroke
+        android:width="0dp"
+        android:color="@android:color/transparent" />
 </shape>
