--- a/app/src/main/res/layout/chat_lists.xml
+++ b/app/src/main/res/layout/chat_lists.xml
@@ -1,357 +1,117 @@
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:orientation="vertical">
-	<LinearLayout
-		android:id="@+id/date"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:padding="8dp"
-		android:background="@android:color/transparent"
-		android:gravity="center_horizontal|center_vertical"
-		android:orientation="horizontal">
-		<TextView
-			android:id="@+id/textview1"
-			android:focusable="false"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:paddingLeft="12dp"
-			android:paddingTop="8dp"
-			android:paddingRight="12dp"
-			android:paddingBottom="8dp"
-			android:background="#F7F7F7"
-			android:text="Today"
-			android:textSize="12sp"
-			android:textColor="#5C6267" />
-		<de.hdodenhof.circleimageview.CircleImageView
-			android:id="@+id/disappeared"
-			android:layout_width="30dp"
-			android:layout_height="30dp"
-			android:background="@android:color/transparent"
-			android:src="@drawable/hide"
-			android:layout_gravity="center_horizontal|center_vertical"
-			app:civ_border_width="0dp"
-			app:civ_border_color="#008DCD"
-			app:civ_circle_background_color="#00000000"
-			app:civ_border_overlay="true" />
-	</LinearLayout>
-	<LinearLayout
-		android:id="@+id/main"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:padding="8dp"
-		android:background="@android:color/transparent"
-		android:gravity="center_vertical"
-		android:orientation="horizontal">
-		<LinearLayout
-			android:id="@+id/linear2"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:padding="8dp"
-			android:orientation="vertical"
-			android:layout_gravity="bottom">
-			<ImageView
-				android:id="@+id/admin"
-				android:focusable="false"
-				android:layout_width="40dp"
-				android:layout_height="40dp"
-				android:padding="3dp"
-				android:src="@drawable/crown"
-				android:scaleType="centerInside"
-				android:translationY="10.0dp"
-				android:layout_gravity="bottom" />
-			<de.hdodenhof.circleimageview.CircleImageView
-				android:id="@+id/group_img"
-				android:layout_width="40dp"
-				android:layout_height="40dp"
-				android:layout_marginRight="5dp"
-				android:src="@drawable/logo"
-				android:layout_gravity="bottom"
-				app:civ_border_width="0dp"
-				app:civ_border_color="#008DCD"
-				app:civ_circle_background_color="#FFFFFF"
-				app:civ_border_overlay="true" />
-		</LinearLayout>
-		<LinearLayout
-			android:id="@+id/linear_group"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="2dp"
-			android:layout_marginBottom="2dp"
-			android:background="@android:color/transparent"
-			android:orientation="vertical">
-			<LinearLayout
-				android:id="@+id/voice_message"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginLeft="10dp"
-				android:layout_marginRight="10dp"
-				android:padding="8dp"
-				android:background="#007BA7"
-				android:gravity="center_horizontal|center_vertical"
-				android:orientation="horizontal">
-				<ImageView
-					android:id="@+id/image_voice"
-					android:focusable="false"
-					android:layout_width="25dp"
-					android:layout_height="25dp"
-					android:padding="2dp"
-					android:src="@drawable/recording"
-					android:scaleType="centerInside" />
-				<TextView
-					android:id="@+id/vm_text"
-					android:focusable="false"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:padding="8dp"
-					android:text="Voice Message"
-					android:textSize="12sp"
-					android:textStyle="bold"
-					android:textColor="#FFFFFF" />
-				<LinearLayout
-					android:id="@+id/linear1"
-					android:layout_width="31dp"
-					android:layout_height="31dp"
-					android:orientation="vertical">
-					<ImageView
-						android:id="@+id/imageview_download"
-						android:focusable="false"
-						android:layout_width="30dp"
-						android:layout_height="30dp"
-						android:padding="5dp"
-						android:src="@drawable/ic_get_app_grey"
-						android:scaleType="centerInside"
-						android:layout_gravity="center_horizontal|center_vertical" />
-					<ProgressBar
-						android:id="@+id/progressbar1"
-						android:focusable="false"
-						android:layout_width="35dp"
-						android:layout_height="35dp"
-						android:indeterminate="false"
-						style="?android:progressBarStyle"
-						android:layout_gravity="center_horizontal|center_vertical" />
-				</LinearLayout>
-			</LinearLayout>
-			<androidx.cardview.widget.CardView
-				android:id="@+id/linkPreview"
-				android:layout_width="230dp"
-				android:layout_height="wrap_content"
-				app:cardBackgroundColor="#F5F5FF"
-				android:gravity="center_horizontal|center_vertical"
-				app:cardElevation="0dp"
-				app:cardCornerRadius="20dp">
-				<LinearLayout
-					android:id="@+id/link_pre_child"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:layout_marginLeft="10dp"
-					android:layout_marginRight="10dp"
-					android:padding="8dp"
-					android:background="@android:color/transparent"
-					android:gravity="center_horizontal|center_vertical"
-					android:orientation="vertical">
-					<androidx.cardview.widget.CardView
-						android:id="@+id/link_img"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						app:cardBackgroundColor="@android:color/transparent"
-						app:cardElevation="0dp"
-						app:cardCornerRadius="20dp">
-						<LinearLayout
-							android:id="@+id/linear_link_img_box"
-							android:layout_width="wrap_content"
-							android:layout_height="match_parent"
-							android:orientation="vertical">
-							<ImageView
-								android:id="@+id/imageview_icon"
-								android:focusable="false"
-								android:layout_width="150dp"
-								android:layout_height="150dp"
-								android:src="@drawable/brw"
-								android:scaleType="centerCrop" />
-						</LinearLayout>
-					</androidx.cardview.widget.CardView>
-					<TextView
-						android:id="@+id/tittle"
-						android:focusable="false"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:paddingLeft="8dp"
-						android:paddingTop="8dp"
-						android:paddingRight="8dp"
-						android:paddingBottom="3dp"
-						android:text="Google Search"
-						android:textSize="14sp"
-						android:textColor="#091C2B" />
-					<TextView
-						android:id="@+id/link_dec"
-						android:focusable="false"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:paddingLeft="8dp"
-						android:paddingRight="8dp"
-						android:paddingBottom="8dp"
-						android:text="TextView"
-						android:textSize="12sp"
-						android:textColor="#9E9E9E" />
-					<TextView
-						android:id="@+id/text_link"
-						android:focusable="false"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:padding="8dp"
-						android:text="https://google.com"
-						android:textSize="14sp"
-						android:textColor="#2196F3" />
-				</LinearLayout>
-			</androidx.cardview.widget.CardView>
-			<androidx.cardview.widget.CardView
-				android:id="@+id/image_box"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginLeft="10dp"
-				android:layout_marginRight="10dp"
-				app:cardElevation="0dp"
-				app:cardCornerRadius="25dp">
-				<ImageView
-					android:id="@+id/image"
-					android:focusable="false"
-					android:layout_width="180dp"
-					android:layout_height="225dp"
-					android:src="@drawable/ic_vpn_key_white"
-					android:scaleType="centerCrop" />
-				<ImageView
-					android:id="@+id/play"
-					android:focusable="false"
-					android:layout_width="40dp"
-					android:layout_height="40dp"
-					android:padding="3dp"
-					android:src="@drawable/play"
-					android:scaleType="centerInside"
-					android:layout_gravity="center_horizontal|center_vertical" />
-			</androidx.cardview.widget.CardView>
-			<LinearLayout
-				android:id="@+id/reply_main"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginLeft="10dp"
-				android:layout_marginTop="5dp"
-				android:layout_marginRight="10dp"
-				android:layout_marginBottom="5dp"
-				android:padding="8dp"
-				android:orientation="vertical">
-				<androidx.cardview.widget.CardView
-					android:id="@+id/reply_cardview"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					app:cardElevation="0dp"
-					app:cardCornerRadius="15dp">
-					<LinearLayout
-						android:id="@+id/reply_card_child"
-						android:layout_width="wrap_content"
-						android:layout_height="match_parent"
-						android:padding="8dp"
-						android:orientation="horizontal">
-						<LinearLayout
-							android:id="@+id/reply_bar"
-							android:layout_width="4dp"
-							android:layout_height="match_parent"
-							android:padding="8dp"
-							android:background="#58B77D"
-							android:orientation="vertical" />
-						<TextView
-							android:id="@+id/chat_2"
-							android:focusable="false"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:padding="8dp"
-							android:text="TextView ehejegekeevekebe "
-							android:textSize="14sp"
-							android:textColor="#000000" />
-					</LinearLayout>
-				</androidx.cardview.widget.CardView>
-				<TextView
-					android:id="@+id/reply_txt"
-					android:focusable="false"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:padding="8dp"
-					android:text="No"
-					android:textSize="16sp"
-					android:textColor="#000000" />
-			</LinearLayout>
-			<LinearLayout
-				android:id="@+id/chat_main"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginLeft="10dp"
-				android:layout_marginTop="5dp"
-				android:layout_marginRight="10dp"
-				android:layout_marginBottom="5dp"
-				android:padding="5dp"
-				android:background="#007BA7"
-				android:gravity="center_horizontal|center_vertical"
-				android:orientation="horizontal">
-				<de.hdodenhof.circleimageview.CircleImageView
-					android:id="@+id/view_lock"
-					android:layout_width="20dp"
-					android:layout_height="20dp"
-					android:src="@drawable/view1"
-					android:layout_gravity="center_horizontal|center_vertical"
-					app:civ_border_width="0dp"
-					app:civ_border_color="#008DCD"
-					app:civ_circle_background_color="#00000000"
-					app:civ_border_overlay="true" />
-				<TextView
-					android:id="@+id/text_chat"
-					android:focusable="false"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:padding="8dp"
-					android:text="Hi"
-					android:textSize="16sp"
-					android:textColor="#FFFFFF" />
-			</LinearLayout>
-			<LinearLayout
-				android:id="@+id/chat_time"
-				android:layout_width="wrap_content"
-				android:layout_height="16dp"
-				android:layout_marginLeft="10dp"
-				android:layout_marginRight="10dp"
-				android:gravity="center_horizontal|center_vertical"
-				android:orientation="horizontal">
-				<TextView
-					android:id="@+id/edit"
-					android:focusable="false"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="Edited ⟩⟩"
-					android:textSize="10sp"
-					android:textColor="#FF5722" />
-				<TextView
-					android:id="@+id/time_txt"
-					android:focusable="false"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginLeft="2dp"
-					android:text="09:09 am"
-					android:textSize="10sp"
-					android:textColor="#78909C"
-					android:layout_gravity="center_horizontal|center_vertical" />
-				<ImageView
-					android:id="@+id/tick_image"
-					android:focusable="false"
-					android:layout_width="13dp"
-					android:layout_height="13dp"
-					android:layout_margin="2dp"
-					android:background="@android:color/transparent"
-					android:src="@drawable/ic_done_white"
-					android:scaleType="fitXY"
-					android:layout_gravity="center_horizontal|center_vertical" />
-			</LinearLayout>
-		</LinearLayout>
-	</LinearLayout>
-</LinearLayout>
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="4dp"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="2dp"
+    app:cardBackgroundColor="?attr/colorSurface"
+    android:foreground="?attr/selectableItemBackground">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="12dp">
+
+        <!-- Message Bubble -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/message_bubble"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:cardCornerRadius="18dp"
+            app:cardElevation="1dp"
+            app:cardBackgroundColor="@color/chat_bubble_receiver"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintWidth_max="280dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="12dp">
+
+                <!-- Message Text -->
+                <TextView
+                    android:id="@+id/message_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hello! How are you doing today?"
+                    android:textSize="16sp"
+                    android:textColor="?attr/colorOnSurface"
+                    android:lineSpacingExtra="2dp" />
+
+                <!-- Message Info -->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="end|center_vertical"
+                    android:layout_gravity="end"
+                    android:layout_marginTop="4dp">
+
+                    <!-- Timestamp -->
+                    <TextView
+                        android:id="@+id/message_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="12:30"
+                        android:textSize="11sp"
+                        android:textColor="?attr/colorOnSurfaceVariant"
+                        android:layout_marginEnd="4dp" />
+
+                    <!-- Message Status (for sent messages) -->
+                    <ImageView
+                        android:id="@+id/message_status"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:src="@drawable/ic_check"
+                        android:scaleType="centerInside"
+                        android:visibility="gone" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- Message Reactions (Hidden by default) -->
+        <LinearLayout
+            android:id="@+id/reactions_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="4dp"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/message_bubble"
+            app:layout_constraintStart_toStartOf="@id/message_bubble">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="👍"
+                android:textSize="14sp"
+                android:background="@drawable/rounded_button"
+                android:backgroundTint="?attr/colorSurfaceVariant"
+                android:padding="4dp"
+                android:layout_marginEnd="4dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="❤️"
+                android:textSize="14sp"
+                android:background="@drawable/rounded_button"
+                android:backgroundTint="?attr/colorSurfaceVariant"
+                android:padding="4dp" />
+
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
