--- a/app/src/main/res/layout/users.xml
+++ b/app/src/main/res/layout/users.xml
@@ -1,247 +1,249 @@
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:id="@+id/_coordinator"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent">
-	<LinearLayout
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:orientation="vertical">
-		<LinearLayout
-			android:id="@+id/linear_horizon"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:orientation="horizontal"
-			android:layout_weight="1">
-			<LinearLayout
-				android:id="@+id/linear1"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:orientation="vertical">
-				<LinearLayout
-					android:id="@+id/linear_tranp"
-					android:layout_width="match_parent"
-					android:layout_height="35dp"
-					android:padding="8dp"
-					android:background="@android:color/transparent"
-					android:orientation="horizontal" />
-				<LinearLayout
-					android:id="@+id/linear_header"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:paddingLeft="5dp"
-					android:paddingTop="1dp"
-					android:paddingRight="5dp"
-					android:paddingBottom="1dp"
-					android:background="#007BA7"
-					android:gravity="center_vertical"
-					android:orientation="horizontal">
-					<TextView
-						android:id="@+id/textview_header"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:padding="8dp"
-						android:text="Messages"
-						android:textSize="20sp"
-						android:textStyle="bold"
-						android:textColor="#FFFFFF" />
-					<LinearLayout
-						android:id="@+id/linear_search_id"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:layout_marginLeft="10dp"
-						android:layout_marginTop="5dp"
-						android:layout_marginBottom="5dp"
-						android:background="@android:color/transparent"
-						android:gravity="center_vertical"
-						android:orientation="horizontal"
-						android:layout_weight="1">
-						<ImageView
-							android:id="@+id/search_2"
-							android:layout_width="30dp"
-							android:layout_height="30dp"
-							android:layout_marginLeft="5dp"
-							android:src="@drawable/search"
-							android:scaleType="fitXY"
-							android:alpha="0.5" />
-						<EditText
-							android:id="@+id/edittext1"
-							android:layout_width="match_parent"
-							android:layout_height="60dp"
-							android:padding="8dp"
-							android:background="@android:color/transparent"
-							android:textSize="16sp"
-							android:textColor="#FFFFFF"
-							android:hint="Search users.."
-							android:textColorHint="#EEEEEE"
-							android:layout_weight="1" />
-						<ImageView
-							android:id="@+id/imageview_close_seach"
-							android:layout_width="30dp"
-							android:layout_height="30dp"
-							android:padding="3dp"
-							android:src="@drawable/ico_2"
-							android:scaleType="fitXY"
-							android:alpha="0.5" />
-					</LinearLayout>
-					<ImageView
-						android:id="@+id/search"
-						android:layout_width="30dp"
-						android:layout_height="30dp"
-						android:src="@drawable/search"
-						android:scaleType="fitXY" />
-					<LinearLayout
-						android:id="@+id/request_box"
-						android:layout_width="41dp"
-						android:layout_height="41dp"
-						android:orientation="vertical">
-						<ImageView
-							android:id="@+id/request"
-							android:layout_width="40dp"
-							android:layout_height="40dp"
-							android:padding="5dp"
-							android:src="@drawable/requests_pop"
-							android:scaleType="centerInside"
-							android:layout_gravity="center_horizontal|center_vertical" />
-						<TextView
-							android:id="@+id/request_count"
-							android:layout_width="17dp"
-							android:layout_height="17dp"
-							android:gravity="center_horizontal|center_vertical"
-							android:text="0"
-							android:textSize="10sp"
-							android:textColor="#007BA7"
-							android:translationX="5.0dp"
-							android:translationY="-32.0dp"
-							android:layout_gravity="center_horizontal|center_vertical" />
-					</LinearLayout>
-					<ImageView
-						android:id="@+id/settings"
-						android:layout_width="30dp"
-						android:layout_height="30dp"
-						android:layout_marginLeft="5dp"
-						android:src="@drawable/settings"
-						android:scaleType="centerCrop"
-						android:layout_gravity="center_horizontal|center_vertical"
-						android:transitionName="image" />
-				</LinearLayout>
-				<LinearLayout
-					android:id="@+id/linear_story"
-					android:layout_width="match_parent"
-					android:layout_height="100dp"
-					android:paddingLeft="8dp"
-					android:paddingRight="8dp"
-					android:gravity="center_vertical"
-					android:orientation="horizontal">
-					<LinearLayout
-						android:id="@+id/linear_story_main"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:gravity="center_horizontal|center_vertical"
-						android:orientation="vertical">
-						<LinearLayout
-							android:id="@+id/story_bg"
-							android:layout_width="70dp"
-							android:layout_height="70dp"
-							android:gravity="center_horizontal"
-							android:orientation="vertical">
-							<de.hdodenhof.circleimageview.CircleImageView
-								android:id="@+id/story_img"
-								android:layout_width="70dp"
-								android:layout_height="70dp"
-								android:padding="5dp"
-								android:src="@drawable/banned_user"
-								app:civ_border_width="0dp"
-								app:civ_border_color="#008DCD"
-								app:civ_circle_background_color="#00000000"
-								app:civ_border_overlay="true" />
-							<ImageView
-								android:id="@+id/imageview_plus"
-								android:layout_width="20dp"
-								android:layout_height="20dp"
-								android:padding="3dp"
-								android:background="@android:color/transparent"
-								android:src="@drawable/plus"
-								android:scaleType="centerCrop"
-								android:translationX="15.0dp"
-								android:translationY="-20.0dp" />
-						</LinearLayout>
-						<TextView
-							android:id="@+id/textview2"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:padding="5dp"
-							android:text="Your Story"
-							android:textSize="14sp"
-							android:textStyle="bold"
-							android:textColor="#000000"
-							android:layout_gravity="center_horizontal|center_vertical" />
-					</LinearLayout>
-					<androidx.recyclerview.widget.RecyclerView
-						android:id="@+id/recyclerview1"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:padding="8dp"
-						tools:listitem="@layout/storyview" />
-				</LinearLayout>
-				<LinearLayout
-					android:id="@+id/linear_caller"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:layout_marginLeft="20dp"
-					android:layout_marginTop="5dp"
-					android:layout_marginRight="20dp"
-					android:layout_marginBottom="5dp"
-					android:padding="8dp"
-					android:background="#F5F9FC"
-					android:orientation="horizontal">
-					<TextView
-						android:id="@+id/textview_user_call"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:padding="8dp"
-						android:text="User2 "
-						android:textSize="14sp"
-						android:textColor="#000000" />
-					<TextView
-						android:id="@+id/textview_calling"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:padding="8dp"
-						android:text="Calling.."
-						android:textSize="14sp"
-						android:textColor="#000000"
-						android:layout_weight="1" />
-					<ImageView
-						android:id="@+id/img_call"
-						android:layout_width="35dp"
-						android:layout_height="35dp"
-						android:background="#44926A"
-						android:src="@drawable/voicecall"
-						android:scaleType="centerInside" />
-				</LinearLayout>
-				<ListView
-					android:id="@+id/listview1"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:padding="8dp"
-					android:dividerHeight="0dp"
-					android:divider="@null"
-					android:choiceMode="none"
-					tools:listitem="@layout/users_list" />
-			</LinearLayout>
-		</LinearLayout>
-	</LinearLayout>
-	<com.google.android.material.floatingactionbutton.FloatingActionButton
-		android:id="@+id/_fab"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginLeft="16dp"
-		android:layout_marginTop="16dp"
-		android:layout_marginRight="50dp"
-		android:layout_marginBottom="50dp"
-		android:layout_gravity="right|bottom"
-		app:srcCompat="@drawable/plus_users" />
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="?attr/colorSurface">
+
+    <!-- Header -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/header_card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardElevation="4dp"
+        app:cardCornerRadius="0dp"
+        app:cardBackgroundColor="?attr/colorPrimary"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:padding="16dp"
+            android:minHeight="64dp">
+
+            <!-- Menu Button -->
+            <ImageView
+                android:id="@+id/menu"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_menu"
+                android:scaleType="centerInside"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:padding="8dp"
+                android:layout_marginEnd="16dp" />
+
+            <!-- Title -->
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="ChatMe"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@android:color/white" />
+
+            <!-- Search Button -->
+            <ImageView
+                android:id="@+id/search"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_search"
+                android:scaleType="centerInside"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:padding="8dp"
+                android:layout_marginEnd="8dp" />
+
+            <!-- More Options -->
+            <ImageView
+                android:id="@+id/more_options"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_more_vert"
+                android:scaleType="centerInside"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:padding="8dp" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <!-- Search Bar (Hidden by default) -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/search_card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:cardCornerRadius="24dp"
+        app:cardElevation="4dp"
+        app:cardBackgroundColor="?attr/colorSurfaceVariant"
+        app:layout_constraintTop_toBottomOf="@id/header_card"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:padding="4dp">
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_search"
+                android:scaleType="centerInside"
+                android:padding="8dp" />
+
+            <EditText
+                android:id="@+id/search_input"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:hint="Search conversations..."
+                android:textColorHint="?attr/colorOnSurfaceVariant"
+                android:textColor="?attr/colorOnSurface"
+                android:textSize="16sp"
+                android:padding="12dp"
+                android:inputType="text"
+                android:imeOptions="actionSearch" />
+
+            <ImageView
+                android:id="@+id/clear_search"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_close"
+                android:scaleType="centerInside"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:padding="8dp"
+                android:visibility="gone" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <!-- Tab Layout -->
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="?attr/colorSurface"
+        app:tabMode="fixed"
+        app:tabGravity="fill"
+        app:tabIndicatorColor="?attr/colorPrimary"
+        app:tabSelectedTextColor="?attr/colorPrimary"
+        app:tabTextColor="?attr/colorOnSurfaceVariant"
+        app:layout_constraintTop_toBottomOf="@id/search_card"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="All Chats" />
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Unread" />
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Groups" />
+
+    </com.google.android.material.tabs.TabLayout>
+
+    <!-- ViewPager for Tab Content -->
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/tab_layout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Users RecyclerView (Main Content) -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:padding="8dp"
+        android:clipToPadding="false"
+        app:layout_constraintTop_toBottomOf="@id/tab_layout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:listitem="@layout/users_list" />
+
+    <!-- Empty State -->
+    <LinearLayout
+        android:id="@+id/empty_state"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottie_empty"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginBottom="16dp"
+            app:lottie_fileName="lottie/Call Center Support.json"
+            app:lottie_loop="true"
+            app:lottie_autoPlay="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No conversations yet"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="?attr/colorOnSurface"
+            android:layout_marginBottom="8dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Start a new conversation to get started"
+            android:textSize="14sp"
+            android:textColor="?attr/colorOnSurfaceVariant"
+            android:gravity="center"
+            android:layout_marginBottom="24dp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/start_chat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Start Chatting"
+            android:textAllCaps="false"
+            style="@style/Widget.ChatMe.Button" />
+
+    </LinearLayout>
+
+    <!-- Floating Action Button -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_new_chat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_add"
+        app:tint="@android:color/white"
+        app:backgroundTint="?attr/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
