--- a/app/src/main/res/layout/users_list.xml
+++ b/app/src/main/res/layout/users_list.xml
@@ -1,197 +1,194 @@
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:orientation="vertical">
-	<LinearLayout
-		android:id="@+id/linear1"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_margin="2dp"
-		android:background="@android:color/transparent"
-		android:gravity="center_vertical"
-		android:orientation="horizontal">
-		<LinearLayout
-			android:id="@+id/linear_dp"
-			android:layout_width="61dp"
-			android:layout_height="59dp"
-			android:gravity="center_horizontal"
-			android:orientation="vertical">
-			<de.hdodenhof.circleimageview.CircleImageView
-				android:id="@+id/circleimageview1"
-				android:layout_width="60dp"
-				android:layout_height="60dp"
-				android:paddingLeft="3dp"
-				android:paddingTop="3dp"
-				android:paddingRight="1dp"
-				android:paddingBottom="3dp"
-				android:src="@drawable/banned_user"
-				app:civ_border_width="0dp"
-				app:civ_border_color="#008DCD"
-				app:civ_circle_background_color="#FFFFFF"
-				app:civ_border_overlay="true" />
-			<de.hdodenhof.circleimageview.CircleImageView
-				android:id="@+id/disappeare_icon"
-				android:layout_width="20dp"
-				android:layout_height="20dp"
-				android:src="@drawable/verify563_3"
-				android:translationX="-5.0dp"
-				android:translationY="-25.0dp"
-				android:layout_gravity="right"
-				app:civ_border_width="0dp"
-				app:civ_border_color="#008DCD"
-				app:civ_circle_background_color="#FFFFFF"
-				app:civ_border_overlay="true" />
-		</LinearLayout>
-		<LinearLayout
-			android:id="@+id/linear2"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginLeft="5dp"
-			android:gravity="center_vertical"
-			android:orientation="vertical"
-			android:layout_weight="1">
-			<LinearLayout
-				android:id="@+id/linear3"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:gravity="center_horizontal|center_vertical"
-				android:orientation="horizontal">
-				<TextView
-					android:id="@+id/textview1"
-					android:focusable="false"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginLeft="8dp"
-					android:padding="1dp"
-					android:text="Sunny Mavale"
-					android:textSize="14sp"
-					android:textColor="#FFFFFF" />
-				<ImageView
-					android:id="@+id/verified"
-					android:focusable="false"
-					android:layout_width="17dp"
-					android:layout_height="17dp"
-					android:layout_marginLeft="2dp"
-					android:src="@drawable/verify563_3"
-					android:scaleType="fitCenter"
-					android:layout_gravity="center_horizontal|center_vertical" />
-			</LinearLayout>
-			<LinearLayout
-				android:id="@+id/linearSubTitle"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:gravity="center_vertical"
-				android:orientation="horizontal">
-				<ImageView
-					android:id="@+id/sub_image"
-					android:focusable="false"
-					android:layout_width="20dp"
-					android:layout_height="20dp"
-					android:src="@drawable/sub_img"
-					android:scaleType="centerInside"
-					android:translationY="1.0dp"
-					android:layout_gravity="center_horizontal|center_vertical" />
-				<TextView
-					android:id="@+id/subtitle_text"
-					android:focusable="false"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:layout_marginLeft="8dp"
-					android:text="Sent a Images."
-					android:textSize="11sp"
-					android:textColor="#607D8B"
-					android:lines="1"
-					android:layout_gravity="center_horizontal|center_vertical"
-					android:ellipsize="end"
-					android:scrollHorizontally="true" />
-			</LinearLayout>
-		</LinearLayout>
-		<LinearLayout
-			android:id="@+id/linear4"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:paddingLeft="3dp"
-			android:paddingTop="8dp"
-			android:paddingRight="3dp"
-			android:paddingBottom="8dp"
-			android:gravity="right"
-			android:orientation="vertical">
-			<LinearLayout
-				android:id="@+id/linear5"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="5dp"
-				android:gravity="center_horizontal|center_vertical"
-				android:orientation="horizontal">
-				<TextView
-					android:id="@+id/extra"
-					android:focusable="false"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginLeft="2dp"
-					android:layout_marginTop="2dp"
-					android:layout_marginRight="5dp"
-					android:layout_marginBottom="2dp"
-					android:padding="2dp"
-					android:background="@android:color/transparent"
-					android:gravity="center_horizontal|center_vertical"
-					android:text="online"
-					android:textSize="10sp"
-					android:textColor="#607D8B" />
-			</LinearLayout>
-			<LinearLayout
-				android:id="@+id/linear_message_dot"
-				android:layout_width="20dp"
-				android:layout_height="20dp"
-				android:layout_marginLeft="2dp"
-				android:layout_marginTop="2dp"
-				android:layout_marginRight="10dp"
-				android:layout_marginBottom="2dp"
-				android:padding="3dp"
-				android:background="#00C853"
-				android:gravity="center_horizontal|center_vertical"
-				android:orientation="vertical">
-				<TextView
-					android:id="@+id/message_count"
-					android:focusable="false"
-					android:layout_width="wrap_content"
-					android:layout_height="17dp"
-					android:gravity="center_horizontal|center_vertical"
-					android:text="09"
-					android:textSize="12sp"
-					android:textColor="#FFFFFF" />
-			</LinearLayout>
-		</LinearLayout>
-	</LinearLayout>
-	<LinearLayout
-		android:id="@+id/system"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:padding="8dp"
-		android:background="@android:color/transparent"
-		android:gravity="center_horizontal|center_vertical"
-		android:orientation="horizontal">
-		<ImageView
-			android:id="@+id/sys_icon"
-			android:focusable="false"
-			android:layout_width="45dp"
-			android:layout_height="45dp"
-			android:src="@drawable/ban"
-			android:scaleType="centerInside" />
-		<TextView
-			android:id="@+id/sys_text"
-			android:focusable="false"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:padding="8dp"
-			android:background="@android:color/transparent"
-			android:text="Dear user , your id getting more &amp; more reports about spam! this message for warn you!"
-			android:textSize="12sp"
-			android:textStyle="bold"
-			android:textColor="#E74C3C"
-			android:layout_weight="1" />
-	</LinearLayout>
-</LinearLayout>
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="4dp"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="1dp"
+    app:cardBackgroundColor="?attr/colorSurface"
+    android:foreground="?attr/selectableItemBackground">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="16dp">
+
+        <!-- Profile Picture -->
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:src="@drawable/banned_user"
+            app:civ_border_width="2dp"
+            app:civ_border_color="?attr/colorPrimary"
+            app:civ_circle_background_color="?attr/colorSurfaceVariant"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <!-- Online Status Indicator -->
+        <View
+            android:id="@+id/online_status"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:background="@drawable/circle"
+            android:backgroundTint="@color/md_theme_light_primary"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/profile_image"
+            app:layout_constraintEnd_toEndOf="@id/profile_image" />
+
+        <!-- User Info Container -->
+        <LinearLayout
+            android:id="@+id/user_info_container"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toTopOf="@id/profile_image"
+            app:layout_constraintBottom_toBottomOf="@id/profile_image"
+            app:layout_constraintStart_toEndOf="@id/profile_image"
+            app:layout_constraintEnd_toStartOf="@id/time_container">
+
+            <!-- User Name Row -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:id="@+id/user_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="John Doe"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textColor="?attr/colorOnSurface"
+                    android:maxLines="1"
+                    android:ellipsize="end" />
+
+                <!-- Verified Badge -->
+                <ImageView
+                    android:id="@+id/verified_badge"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:src="@drawable/verify563_3"
+                    android:scaleType="centerInside"
+                    android:layout_marginStart="4dp"
+                    android:visibility="gone" />
+
+            </LinearLayout>
+
+            <!-- Last Message -->
+            <TextView
+                android:id="@+id/last_message"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Hey! How are you doing today? Let's catch up soon..."
+                android:textSize="14sp"
+                android:textColor="?attr/colorOnSurfaceVariant"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:layout_marginTop="2dp" />
+
+        </LinearLayout>
+
+        <!-- Time and Status Container -->
+        <LinearLayout
+            android:id="@+id/time_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="end"
+            app:layout_constraintTop_toTopOf="@id/profile_image"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <!-- Time -->
+            <TextView
+                android:id="@+id/message_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="12:30"
+                android:textSize="12sp"
+                android:textColor="?attr/colorOnSurfaceVariant" />
+
+            <!-- Unread Count Badge -->
+            <TextView
+                android:id="@+id/unread_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="3"
+                android:textSize="11sp"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:background="@drawable/circle"
+                android:backgroundTint="?attr/colorPrimary"
+                android:minWidth="20dp"
+                android:minHeight="20dp"
+                android:gravity="center"
+                android:layout_marginTop="4dp"
+                android:visibility="gone" />
+
+        </LinearLayout>
+
+        <!-- Message Status (for sent messages) -->
+        <ImageView
+            android:id="@+id/message_status"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:src="@drawable/ic_check"
+            android:scaleType="centerInside"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/time_container"
+            app:layout_constraintEnd_toStartOf="@id/time_container"
+            app:layout_constraintTop_toTopOf="@id/time_container" />
+
+        <!-- Typing Indicator -->
+        <LinearLayout
+            android:id="@+id/typing_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/user_info_container"
+            app:layout_constraintStart_toStartOf="@id/user_info_container">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="typing"
+                android:textSize="12sp"
+                android:textStyle="italic"
+                android:textColor="?attr/colorPrimary" />
+
+            <View
+                android:layout_width="4dp"
+                android:layout_height="4dp"
+                android:background="@drawable/circle"
+                android:backgroundTint="?attr/colorPrimary"
+                android:layout_marginStart="4dp" />
+
+            <View
+                android:layout_width="4dp"
+                android:layout_height="4dp"
+                android:background="@drawable/circle"
+                android:backgroundTint="?attr/colorPrimary"
+                android:layout_marginStart="2dp" />
+
+            <View
+                android:layout_width="4dp"
+                android:layout_height="4dp"
+                android:background="@drawable/circle"
+                android:backgroundTint="?attr/colorPrimary"
+                android:layout_marginStart="2dp" />
+
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
