--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,78 @@
 <resources>
-	<color name="colorPrimary">#007BA7</color>
-	<color name="colorPrimaryDark">#007BA7</color>
-	<color name="colorAccent">#007BA7</color>
-	<color name="colorControlHighlight">#F7CAC9</color>
-	<color name="colorControlNormal">#007BA7</color>
+    <!-- Material3 Light Theme Colors -->
+    <color name="md_theme_light_primary">#2A90FF</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#D6E7FF</color>
+    <color name="md_theme_light_onPrimaryContainer">#001C3B</color>
+    <color name="md_theme_light_secondary">#545F70</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#D7E3F8</color>
+    <color name="md_theme_light_onSecondaryContainer">#111C2B</color>
+    <color name="md_theme_light_tertiary">#6D5677</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#F5DAFF</color>
+    <color name="md_theme_light_onTertiaryContainer">#271131</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#FAFBFF</color>
+    <color name="md_theme_light_onBackground">#111827</color>
+    <color name="md_theme_light_surface">#FAFBFF</color>
+    <color name="md_theme_light_onSurface">#111827</color>
+    <color name="md_theme_light_surfaceVariant">#DFE2EB</color>
+    <color name="md_theme_light_onSurfaceVariant">#43474E</color>
+    <color name="md_theme_light_outline">#73777F</color>
+    <color name="md_theme_light_inverseOnSurface">#F0F1F6</color>
+    <color name="md_theme_light_inverseSurface">#2E3036</color>
+    <color name="md_theme_light_inversePrimary">#A9C7FF</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#2A90FF</color>
+    <color name="md_theme_light_outlineVariant">#C3C6CF</color>
+    <color name="md_theme_light_scrim">#000000</color>
+
+    <!-- Material3 Dark Theme Colors -->
+    <color name="md_theme_dark_primary">#A9C7FF</color>
+    <color name="md_theme_dark_onPrimary">#003060</color>
+    <color name="md_theme_dark_primaryContainer">#004788</color>
+    <color name="md_theme_dark_onPrimaryContainer">#D6E7FF</color>
+    <color name="md_theme_dark_secondary">#BBC7DB</color>
+    <color name="md_theme_dark_onSecondary">#263141</color>
+    <color name="md_theme_dark_secondaryContainer">#3C4858</color>
+    <color name="md_theme_dark_onSecondaryContainer">#D7E3F8</color>
+    <color name="md_theme_dark_tertiary">#D8BEE2</color>
+    <color name="md_theme_dark_onTertiary">#3D2947</color>
+    <color name="md_theme_dark_tertiaryContainer">#543F5E</color>
+    <color name="md_theme_dark_onTertiaryContainer">#F5DAFF</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#0F1419</color>
+    <color name="md_theme_dark_onBackground">#E1E2E8</color>
+    <color name="md_theme_dark_surface">#0F1419</color>
+    <color name="md_theme_dark_onSurface">#E1E2E8</color>
+    <color name="md_theme_dark_surfaceVariant">#43474E</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C3C6CF</color>
+    <color name="md_theme_dark_outline">#8D9199</color>
+    <color name="md_theme_dark_inverseOnSurface">#0F1419</color>
+    <color name="md_theme_dark_inverseSurface">#E1E2E8</color>
+    <color name="md_theme_dark_inversePrimary">#2A90FF</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#A9C7FF</color>
+    <color name="md_theme_dark_outlineVariant">#43474E</color>
+    <color name="md_theme_dark_scrim">#000000</color>
+
+    <!-- Chat specific colors -->
+    <color name="chat_bubble_sender">#2A90FF</color>
+    <color name="chat_bubble_receiver">#F5F7FA</color>
+    <color name="chat_bubble_sender_dark">#A9C7FF</color>
+    <color name="chat_bubble_receiver_dark">#2A2D32</color>
+    
+    <!-- Legacy colors for compatibility -->
+    <color name="colorPrimary">@color/md_theme_light_primary</color>
+    <color name="colorPrimaryDark">@color/md_theme_light_primary</color>
+    <color name="colorAccent">@color/md_theme_light_primary</color>
+    <color name="colorControlHighlight">#F7CAC9</color>
+    <color name="colorControlNormal">@color/md_theme_light_primary</color>
 </resources>
