--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -36,10 +36,9 @@
         <item name="android:windowLightNavigationBar">false</item>
         
         <!-- Animation durations -->
-        <item name="android:shortAnimTime">200</item>
-        <item name="android:mediumAnimTime">300</item>
-        <item name="android:longAnimTime">500</item>
-    </style>
+        <item name="shortAnimTime">200</item>
+        <item name="mediumAnimTime">300</item>
+        <item name="longAnimTime">500</item>
 
     <!-- Rounded Button Style for Dark Theme -->
     <style name="Widget.ChatMe.Button" parent="Widget.Material3.Button">
